--- a/aula8/projeto_site/ferrrari.html
+++ b/aula8/projeto_site/ferrrari.html
@@ -5,12 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ferrari infortions</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+    <body>
+         <header>
+            <h1>Aqui estão algumas inrofmações sobre a Ferrari-SF90!</h1>
+         </header>
+            
+         <ul>
+            <li><h2>Essa Ferrari é equipada com tração 4 rodas.</h2></li>
+         </ul>
+            
+         <ul>
+            <li><h2>O seu arranque vai de 0-100 km/h em 2,5 segundos e de 0-200 km/h em apenas 6,7 segundos.</h2></li>
+         </ul>
 
-<body>
+         <ul>
+            <li><h2>A Ferrari-SF90 tem um total de 4 motores sendo 3 deles elétricos e 1 motor 4.0 twinturbo, que entregam 1000 cavalos de potência.</h2></li>
+         </ul>
+         <ul>
+            <li><h2> O preço de uma Ferrari-SF90 está na faixa de R$4.690.000</h2></li>
+         </ul>
+         <ul>
+            <li><h2>estamos com essa Ferrari-SF90, é a última do estoque!</h2></li>
+         </ul>
+         <img src="../projeto_site/imagens/Ferrari-SF90_stradale.jpg" alt="Ferrari-SF90" > 
+         <ul>
+            <li><h2>Entre em contato conosco clicando neste link abaixo:</h2></li>
+         </ul>
 
-   
+         <p><h3>Clique <a href="../projeto_site/contato.html">AQUI</a></h3></p>
 
-</body>
+         <br><br><br><br><br>
+
+          <p><h2>Para voltar à página inicial, clique <a href="../projeto_site/index.html">AQUI</a></h2></p>          
+
+    </body>
 
 </html>
