--- a/aula8/projeto_site/index.html
+++ b/aula8/projeto_site/index.html
@@ -12,6 +12,7 @@
     <header>
         <h1>Carros esportivos de qualidade</h1>
     </header>
+    <h2>Aqui está uma lista de alguns carros que você encontrara nesse site e aqui é o site perfeito para amantes de carros. </h2>
     <p>
     <h3>Lista de carros</h3>
     </p>
@@ -34,7 +35,7 @@
 
 
 
-    <img src="../projeto_site/ferrari-sf90.webp" alt="Ferrari SF90">
+    <img src="../projeto_site/imagens/ferrari-sf90.webp" alt="Ferrari SF90">
     <ul>
         <li>
             <p>
@@ -46,7 +47,7 @@
 
 
 
-    <img src="../projeto_site/Nissan_SilviaS15.jpg" alt="Nissan Silvia S15">
+    <img src="../projeto_site/imagens/Nissan_SilviaS15.jpg" alt="Nissan Silvia S15">
     <ul>
         <li>
             <p>
@@ -58,7 +59,7 @@
     
 
 
-        <img src="../projeto_site/Koenigsegg-Jesko-Absolut.jpg.webp" alt="Koenigsegg Jesko Absolut">
+        <img src="../projeto_site/imagens/Koenigsegg-Jesko-Absolut.jpg.webp" alt="Koenigsegg Jesko Absolut">
     <ul>
         <li>
             <p>
