--- a/aula10-projeto_CSS/projeto_site/contato.html
+++ b/aula10-projeto_CSS/projeto_site/contato.html
@@ -36,8 +36,8 @@
             <input type="submit" value="Enviar">
             <input type="reset" value="Cancelar">
         </p> 
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <p style="font-size: large;">Para voltar a pagína principal clique<a href="../exercicio/evento.html">AQUI</a>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <p style="font-size: large;">Para voltar a pagína principal clique<a href="../projeto_site/index.html">AQUI</a>
     
 </body>
 </html>
