--- a/aula10-projeto_CSS/projeto_site/ferrrari.html
+++ b/aula10-projeto_CSS/projeto_site/ferrrari.html
@@ -4,14 +4,14 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>ferrari infortions</title>
+   <title>ferrari informations</title>
    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
    <div class="ferrari">
       <header>
-         <h1>Aqui estão algumas inrofmações sobre a Ferrari-SF90!</h1>
+         <h1>Aqui estão algumas informações sobre a Ferrari-SF90!</h1>
       </header>
    </div>
 
@@ -33,7 +33,9 @@
          <li>
             <p>estamos com essa Ferrari-SF90, é a última do estoque!</p>
          </li>
-         <li><img src="../projeto_site/imagens/Ferrari-SF90_stradale.jpg" alt="Ferrari"></li>
+         <!-- ponto extra --> 
+         <a href="https://www.webmotors.com.br/carros/estoque/ferrari"><img src="../projeto_site/imagens/Ferrari-SF90_stradale.jpg" alt="Ferrari"></a>
+
          <li>
             <p>Entre em contato conosco clicando neste link abaixo:</p>
          </li>
