--- a/aula10-projeto_CSS/projeto_site/nissan.html
+++ b/aula10-projeto_CSS/projeto_site/nissan.html
@@ -1,45 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nissan information</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header><h1>Aqui estão algumas infromações sobre o Nissan Silvia S15</h1></header>
 
-    <ul>
-        <li><h2>O Nissan tem um motor 1.8 L DOHC-I4 (CA18DE) 1.8 L DOHC Turbo-I4 (CA18DET) 2.0 L DOHC-I4 (SR20DE), 140 PS 2.0 L DOHC Turbo-I4 (SR20DET), 205 PS</h2></li>
-    </ul>
-    
-    <ul>
-        <li><h2>O preço de um Nissan Silvia S15 custa R$215 mil reais</h2></li>
-    </ul>
+<body class="nissan-body">
+    <header id="title-nissan"><p> Aqui estão algumas informações sobre o Nissan Silvia S15</p></header>
+    <div class="nissan">
+        <ul>
+            <li>
+                <p>O Nissan tem um motor 1.8 L DOHC-I4 (CA18DE) 1.8 L DOHC Turbo-I4 (CA18DET) 2.0 L DOHC-I4 (SR20DE),
+                    140 PS 2.0 L
+                    DOHC Turbo-I4 (SR20DET), 205 PS! </p>
+            </li>
 
-       <ul>
-        <li><h2> É tração traseira e ele tem de 80 a 450 cavalos</h2></li>
-       </ul>
 
-       <ul>
-        <li><h2>E ele é câmbio manual e tem 6 marchas</h2></li>
-       </ul>
 
-       <ul>
-         <li><h2>Nós temos uma unidade apenas</h2></li>
-       </ul>
+            <li>
+                <p>O preço de um Nissan Silvia S15 custa R$215 mil reais!</p>
+            </li>
 
-       <img src="../projeto_site/imagens/Silvia 15.jpg" alt="Nissan Silvia S15" >
 
-       <ul>
-        <li><h2>Entre em contato conosco clicando neste link abaixo:</h2></li>
-     </ul>
 
-     <p><h3>Clique <a href="../projeto_site/contato.html">AQUI</a></h3></p>
+            <li>
+                <p> É tração traseira e ele tem de 80 a 450 cavalos!</p>
+            </li>
 
-     <br><br>
 
-      <p><h2>Para voltar à página inicial, clique <a href="../projeto_site/index.html">AQUI</a></h2></p>
 
+            <li>
+                <p>E ele é câmbio manual e tem 6 marcha!</p>
+            </li>
+
+
+
+            <li>
+                <p>Nós temos uma unidade apenas!</p>
+            </li>
+
+
+            <img src="../projeto_site/imagens/Silvia 15.jpg" alt="Nissan Silvia S15">
+
+
+        </ul>
+    </div>
+    <div class="rodapé-nissan">
+
+        <p>Entre em contato conosco clicando neste link abaixo:</p>
+
+        <p>Clique <a href="../projeto_site/contato.html">AQUI</a></p>
+
+        
+
+        <p>Para voltar à página inicial, clique <a href="../projeto_site/index.html">AQUI</a></p>
+    </div>
 </body>
+
 </html>
